--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,14 @@
-.App {
+html {
+  height: 100%;
+}
+
+body {
+  background-color: #062429;
+  color: #ffffff;
   text-align: center;
+  height: 100%;
 }
 
-.App-logo {
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #09d3ac;
+#root {
+  height: 100%;
 }
