--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,10 @@
-html {
-  height: 100%;
-}
-
-body {
+html, body {
   background-color: #062429;
   color: #ffffff;
   text-align: center;
   height: 100%;
+  margin: 0;
+  font-family: 'Roboto', Arial, Helvetica, sans-serif;
 }
 
 #root {
