--- a/src/routes/sell.css
+++ b/src/routes/sell.css
@@ -1,5 +1,6 @@
 #sell {
-  height: 100%;
+  height: 95%;
+  padding: 10px;
 }
 
 #sell h1 {
@@ -10,10 +11,20 @@
 #sell .content {
   width: 100%;
   height: 90%;
+  display: flex;
 }
 
 #sell .content .summary {
   width: 20%;
-  height: 100%;
   background-color: #cc0000;
+}
+
+#sell .content .summary .bill {
+  height: 80%;
+  background-color: #00cc00;
+}
+
+#sell .content .summary .pay {
+  height: 20%;
+  background-color: #0000cc;
 }
