--- a/src/components/itemsGrid.scss
+++ b/src/components/itemsGrid.scss
@@ -1,11 +1,10 @@
 .items-grid {
 
   width: 100%;
+  background-color: var(--primary);
 
   .header {
     width: 100%;
-    height: 10%;
-    background-color: #cc0000;
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
@@ -13,24 +12,24 @@
   }
 
   .header .category {
-    width: 50px;
-    height: 20px;
-    padding: 5px;
-    background-color: #333333;
+    width: 100%;
+    height: 50px;
+    line-height: 50px;
+    font-size: 1.5rem;
+    background-color: var(--primary);
 
     &:hover {
-      background-color: #222222;
+      filter: brightness(0.9);
     }
 
     &.active {
-      background-color: #cccc00;
+      background-color: var(--primary-dark);
     }
   }
 
   .content {
     width: 100%;
     height: 90%;
-    background-color: #cccc00;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -41,10 +40,10 @@
     width: 100px;
     height: 100px;
     margin: 10px;
-    background-color: #555555;
+    background-color: var(--primary-light);
 
     &:hover {
-      background-color: #444444;
+      filter: brightness(0.9);
     }
   }
 }
