--- a/src/components/basket.scss
+++ b/src/components/basket.scss
@@ -3,11 +3,20 @@
   .summary {
     height: 80%;
     background-color: var(--primary-dark);
+    overflow: auto;
   }
 
   .pay {
     height: 20%;
     background-color: var(--success);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 2em;
+
+    * {
+      margin: 5px;
+    }
 
     &:hover {
       filter: brightness(0.9);
