Before passing to connected router

--- a/src/app.scss
+++ b/src/app.scss
@@ -16,6 +16,7 @@ body {
 
 :root {
   --accent: #00adb5;
+  --accent-dark: #00565a;
   --light: #eeeeee;
   --primary-dark: #222831;
   --primary: #393e46;
