--- a/src/app.scss
+++ b/src/app.scss
@@ -25,4 +25,8 @@ body {
   --success: #28a745;
   --warning: #ffc107;
   --danger: #dc3545;
+
+  --success-dark: #1c7430;
+  --warning-dark: #b28704;
+  --danger-dark: #9a2530;
 }
