--- a/src/components/modals/payment.scss
+++ b/src/components/modals/payment.scss
@@ -1,4 +1,7 @@
 .payment-modal {
+  --grid-inner-margin: 1px;
+  --card-size: 50px;
+
   .cancel {
     height: 50px;
     width: 50px;
@@ -17,6 +20,39 @@
     justify-content: space-between;
   }
 
+  .letter-grid {
+    display: flex;
+    flex-direction: row;
+
+    .card.visitor-card {
+      line-height: initial;
+      padding: 0 10px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      width: 100%;
+      height: calc(4 * var(--card-size) + 6 * var(--grid-inner-margin));
+    }
+  }
+
+  .card {
+    width: var(--card-size);
+    height: var(--card-size);
+    line-height: var(--card-size);
+    margin: var(--grid-inner-margin);
+    background-color: var(--primary);
+    color: var(--light);
+
+    &:hover {
+      filter: brightness(0.9);
+    }
+
+    &.active {
+      background-color: var(--accent);
+    }
+  }
+
   .keyboard .grid {
     display: flex;
     flex-direction: column;
@@ -25,26 +61,10 @@
       display: flex;
       justify-content: space-between;
     }
-
-    .row .card {
-      width: 50px;
-      height: 50px;
-      line-height: 50px;
-      margin: 1px;
-      background-color: var(--primary);
-      color: var(--light);
-
-      &:hover {
-        filter: brightness(0.9);
-      }
-
-      &.active {
-        background-color: var(--accent);
-      }
-    }
   }
 
   .buttons {
+    margin-top: 25px;
     display: flex;
     justify-content: space-between;
 
