--- a/src/app.scss
+++ b/src/app.scss
@@ -21,6 +21,8 @@ body {
   --primary: #393e46;
   --primary-light: #4a505b;
 
+  --gradient: linear-gradient(135deg, #fb560c 15%, #e21562 85%);
+
   --success: #28a745;
   --warning: #ffc107;
   --danger: #dc3545;
