--- a/src/components/navbar.scss
+++ b/src/components/navbar.scss
@@ -2,17 +2,37 @@
   height: 50px;
   margin: 0;
   font-size: 2rem;
-  padding-left: 20px;
   display: flex;
-  justify-content: space-between;
   align-items: center;
+
+  .back {
+    padding: 0 30px 0 15px;
+    height: 50px;
+    display: flex;
+    align-items: center;
+  }
 
   .title {
     padding: 0 30px;
     margin: auto;
+
+    .reload-icon {
+      font-size: 0.8em;
+      margin-right: 12px;
+    }
   }
 
-  *:hover {
+  .absolute-left {
+    position: absolute;
+    left: 0;
+  }
+
+  .absolute-right {
+    position: absolute;
+    right: 0;
+  }
+
+  > *:hover {
     filter: brightness(0.9);
   }
 }
