--- a/src/components/basket.scss
+++ b/src/components/basket.scss
@@ -18,7 +18,11 @@
       margin: 5px;
     }
 
-    &:hover {
+    &.disabled {
+      filter: brightness(0.6);
+    }
+
+    &:hover:not(.disabled) {
       filter: brightness(0.9);
     }
   }
