--- a/src/components/itemsGrid.scss
+++ b/src/components/itemsGrid.scss
@@ -1,6 +1,7 @@
 .items-grid {
   width: 100%;
   background-color: var(--primary);
+
   .header {
     width: 100%;
     display: flex;
@@ -35,9 +36,10 @@
     overflow: auto;
 
     .item {
-      width: 150px;
-      height: 150px;
+      width: 130px;
+      height: 130px;
       margin: 10px;
+      padding: 10px;
       background-color: var(--primary-light);
       display: flex;
       flex-direction: column;
