--- a/src/routes/preparation.scss
+++ b/src/routes/preparation.scss
@@ -1,6 +1,6 @@
 #preparation {
   display: flex;
-  height: 85%;
+  height: calc(100% - 50px);
   justify-content: space-between;
 
   .status {
@@ -8,24 +8,25 @@
     padding-top: 10px;
     width: 100%;
     height: 100%;
-    padding: 5px 10px;
+    padding: 0 14px;
     background-color: var(--primary);
     overflow: auto;
+    position: relative;
 
     .title {
       font-size: 1.5em;
+      line-height: 60px;
     }
 
-    &.pending {
-      background-color: var(--danger-dark);
-    }
-
-    &.preparing {
-      background-color: var(--warning-dark);
-    }
-
-    &.ready {
-      background-color: var(--success-dark);
+    &:not(:last-child)::after {
+      content: '';
+      display: block;
+      position: absolute;
+      top: 20px;
+      right: 0;
+      background: #aaa;
+      width: 2px;
+      height: calc(100% - 40px);
     }
   }
 
