--- a/src/routes/tv.scss
+++ b/src/routes/tv.scss
@@ -2,13 +2,13 @@
   display: flex;
   justify-content: space-between;
   font-size: 2em;
-  height: 92%;
+  height: 100%;
   text-align: center;
 
   .orders {
     padding: 20px;
     width: 100%;
-    height: 100%;
+    height: calc(100% - 40px);
 
     .cards {
       width: 100%;
@@ -32,18 +32,21 @@
   }
 
   .center {
+    position: relative;
     display: flex;
     flex-direction: column;
-    padding-top: 10px;
 
     .logo {
-      width: 100%;
+      position: absolute;
+      transform: translateX(-50%);
+      width: 100px;
     }
 
     .separator {
-      margin-top: 20px;
-      height: 95%;
-      width: 2px;
+      position: relative;
+      top: 110px;
+      height: calc(100% - 140px);
+      width: 4px;
       background: var(--gradient);
       align-self: center;
     }
