add toast and confirmation modal

--- a/src/routes/preparation.scss
+++ b/src/routes/preparation.scss
@@ -73,3 +73,30 @@
     }
   }
 }
+
+.preparation-modal {
+  .actions {
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: center;
+
+    .button {
+      display: inline-block;
+      padding: 12px 18px;
+      margin: 0 20px;
+      color: #fff;
+
+      &.cancel {
+        background: var(--danger);
+      }
+
+      &.confirm {
+        background: var(--success);
+      }
+
+      &:hover {
+        filter: brightness(0.9);
+      }
+    }
+  }
+}
