--- a/src/routes/login.scss
+++ b/src/routes/login.scss
@@ -1,9 +1,11 @@
 #login {
-  margin-top: 30px;
   height: 100%;
+  display: flex;
+  flex-direction: column;
 
   .title {
     font-size: 3em;
+    padding-top: 30px;
   }
 
   .field {
@@ -21,7 +23,7 @@
     flex-direction: column;
     margin: auto;
     width: 75%;
-    height: 100%;
+    flex-grow: 2;
   }
 
   .digits .digits-row {
