--- a/src/routes/login.scss
+++ b/src/routes/login.scss
@@ -1,7 +1,7 @@
 #login {
-  height: 100%;
   display: flex;
   flex-direction: column;
+  height: 100%;
 
   .title {
     font-size: 3em;
@@ -21,28 +21,29 @@
   .digits {
     display: flex;
     flex-direction: column;
-    margin: auto;
+    margin: 0 auto;
+    max-height: 500px;
     width: 75%;
-    flex-grow: 2;
-  }
+    flex-grow: 1;
 
-  .digits .digits-row {
-    display: flex;
-    justify-content: center;
-    height: 15%;
-
-    .digit {
-      width: 30%;
-      height: 90%;
-      margin: 10px;
-      background-color: var(--primary-light);
+    .digits-row {
       display: flex;
-      font-size: 2em;
-      flex-direction: column;
       justify-content: center;
+      height: 100%;
 
-      &:hover {
-        filter: brightness(0.9);
+      .digit {
+        margin: 0 10px;
+        background-color: var(--primary-light);
+        display: flex;
+        font-size: 2em;
+        flex-direction: column;
+        justify-content: center;
+        flex: 1;
+        height: calc(100% - 20px);
+
+        &:hover {
+          filter: brightness(0.9);
+        }
       }
     }
   }
