--- a/src/routes/tv.scss
+++ b/src/routes/tv.scss
@@ -3,29 +3,38 @@
   justify-content: space-between;
   font-size: 2em;
   text-align: center;
+  height: 100%;
 
   .orders {
     padding: 20px;
     width: 100%;
     height: calc(100% - 40px);
 
-    .cards {
-      width: 100%;
-      padding-top: 50px;
-      display: flex;
-      flex-wrap: wrap;
+    .title {
+      padding-bottom: 50px;
     }
 
-    .card {
-      width: 45%;
-      background-color: var(--primary);
-      padding: 10px 5px;
-      margin: 5px;
+    .container {
+      height: 85%;
+      overflow-y: hidden;
 
-      .items {
-        flex: 1;
-        text-align: left;
-        font-size: 0.5em;
+      .cards {
+        width: 100%;
+        display: flex;
+        flex-wrap: wrap;
+      }
+
+      .card {
+        width: 45%;
+        background-color: var(--primary);
+        padding: 10px 5px;
+        margin: 5px;
+
+        .items {
+          flex: 1;
+          text-align: left;
+          font-size: 0.5em;
+        }
       }
     }
   }
