--- a/src/routes/items.scss
+++ b/src/routes/items.scss
@@ -5,6 +5,8 @@
   align-items: center;
   text-align: left;
   padding: 20px;
+  height: calc(100% - 50px - 40px);
+  overflow-y: scroll;
 
   .categories {
     width: 90%;
