--- a/src/routes/preparation.scss
+++ b/src/routes/preparation.scss
@@ -14,6 +14,7 @@
   display: flex;
   height: calc(100% - 50px);
   justify-content: space-between;
+  background-color: var(--primary);
 
   .status {
     margin: auto;
@@ -21,24 +22,11 @@
     width: 100%;
     height: 100%;
     padding: 0 14px;
-    background-color: var(--primary);
-    overflow: auto;
-    position: relative;
+    overflow: hidden;
 
     .title {
       font-size: 1.5em;
       line-height: 60px;
-    }
-
-    &:not(:last-child)::after {
-      content: '';
-      display: block;
-      position: absolute;
-      top: 20px;
-      right: 0;
-      background: #aaa;
-      width: 2px;
-      height: calc(100% - 40px);
     }
 
     // Removes the visuals clics for pending (because you can't downgrade a pending order)
@@ -51,6 +39,13 @@
         opacity: 0;
       }
     }
+  }
+
+  .separator {
+    width: 2px;
+    background-color: var(--light);
+    position: relative;
+    margin: 10px 0;
   }
 
   .status .orders .order {
