Animation de kéké

--- a/src/routes/items.scss
+++ b/src/routes/items.scss
@@ -29,6 +29,11 @@
       .icon {
         font-size: 0.9em;
         margin-right: 10px;
+        transition: transform 0.25s ease-in;
+
+        &.open {
+          transform: rotateZ(90deg);
+        }
       }
     }
 
