--- a/src/routes/preparation.scss
+++ b/src/routes/preparation.scss
@@ -60,6 +60,7 @@
       display: flex;
       flex-direction: column;
       margin: 5px 0;
+      width: 20%;
 
       .place {
         margin-bottom: 10px;
