Fix login bornes

--- a/src/routes/login.scss
+++ b/src/routes/login.scss
@@ -24,7 +24,7 @@
     margin: 0 auto;
     max-height: 500px;
     width: 75%;
-    flex-grow: 1;
+    flex: 1;
 
     .digits-row {
       display: flex;
