Background normal price added

--- a/src/components/priceToogler.scss
+++ b/src/components/priceToogler.scss
@@ -4,6 +4,7 @@
   line-height: 50px;
   text-align: left;
   padding-left: 10px;
+  background-color: var(--success);
 
   &.active {
     background-color: var(--accent);
