--- a/src/routes/preparation.scss
+++ b/src/routes/preparation.scss
@@ -22,7 +22,10 @@
     width: 100%;
     height: 100%;
     padding: 0 14px;
-    overflow: hidden;
+
+    &::-webkit-scrollbar {
+      width: 0 !important;
+    }
 
     .title {
       font-size: 1.5em;
