Added few stats

--- a/src/routes/items.scss
+++ b/src/routes/items.scss
@@ -1,11 +1,14 @@
 #items {
   font-size: 1.5em;
   text-align: left;
-  padding: 20px;
+  padding: 20px 45px;
   height: calc(100% - 50px - 40px);
 
-  .categories {
-    padding: 0 25px;
+  .stats {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 20px;
   }
 
   .category {
