--- a/src/components/modals/modal.scss
+++ b/src/components/modals/modal.scss
@@ -1,13 +1,22 @@
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.75);
+}
+
 .modal {
   position: absolute;
   top: 5%;
   left: 5%;
   right: 5%;
-  background-color: var(--light);
+  background-color: var(--primary-dark);
   display: flex;
   flex-direction: column;
   padding: 20px;
-  color: var(--primary);
+  color: var(--light);
   font-size: 2em;
 
   // Disable focus border
