--- a/src/components/itemsGrid.scss
+++ b/src/components/itemsGrid.scss
@@ -86,7 +86,7 @@
 }
 
 .modal .supplement-list + .button {
-  background-color: var(--accent);
+  background-color: var(--color-accent-dark);
   cursor: pointer;
   padding: 10px;
   max-width: 200px;
