--- a/src/components/modals/modal.scss
+++ b/src/components/modals/modal.scss
@@ -36,7 +36,7 @@
     }
 
     &.accent {
-      background-color: var(--accent);
+      background-color: var(--color-accent-dark);
     }
 
     &.success {
