--- a/src/components/priceToogler.scss
+++ b/src/components/priceToogler.scss
@@ -7,6 +7,6 @@
   background-color: var(--success);
 
   &.active {
-    background-color: var(--accent);
+    background-color: var(--color-accent-dark);
   }
 }
