--- a/src/routes/tv.scss
+++ b/src/routes/tv.scss
@@ -23,20 +23,25 @@
         width: 100%;
         display: flex;
         flex-wrap: wrap;
+        position: relative;
       }
 
       .card {
         width: calc(50% - 10px - 10px - 4px);
         background-color: var(--primary);
+        border: 4px solid var(--color-accent-primary);
+        box-shadow: 3px 3px 0 var(--color-accent-dark);
         padding: 10px 5px;
         margin: 5px;
-        border: 2px solid;
-        border-image: var(--gradient) 1 1;
+        border-radius: 4px;
+        box-sizing: border-box;
+        flex: 1 0 auto;
 
         .items {
           flex: 1;
           text-align: left;
           font-size: 0.5em;
+          padding-left: 2ch;
         }
       }
     }
