feat: update to ua22
* add buckless integration
* add network status
* update colors

--- a/src/app.scss
+++ b/src/app.scss
@@ -19,9 +19,9 @@ body {
   --primary: #393e46;
   --primary-light: #4a505b;
 
-  --color-accent-dark: #006492;
-  --color-accent-light: #fbb464;
-  --color-accent-primary: #f1737f;
+  --color-accent-dark: #8767aa;
+  --color-accent-light: #f0dced;
+  --color-accent-primary: #cbd7ef;
 
   --success: #28a745;
   --warning: #ffc107;
@@ -36,3 +36,4 @@ body {
   width: 0px; /* Remove scrollbar space */
   background: transparent; /* Optional: just make scrollbar invisible */
 }
+
