--- a/src/components/navbar.scss
+++ b/src/components/navbar.scss
@@ -7,9 +7,18 @@
 
   .back {
     padding: 0 30px 0 15px;
+    gap: 15px;
     height: 50px;
     display: flex;
     align-items: center;
+  }
+
+  .online {
+    color: var(--success);
+  }
+
+  .offline {
+    color: var(--danger);
   }
 
   .title {
@@ -36,3 +45,4 @@
     filter: brightness(0.9);
   }
 }
+
