--- a/src/app/page.scss
+++ b/src/app/page.scss
@@ -33,7 +33,6 @@ body {
 }
 
 ::-webkit-scrollbar {
-  width: 0px; /* Remove scrollbar space */
+  width: 0; /* Remove scrollbar space */
   background: transparent; /* Optional: just make scrollbar invisible */
 }
-
