--- a/src/components/modals/modal.scss
+++ b/src/components/modals/modal.scss
@@ -27,7 +27,7 @@
   .content .button {
     height: 60px;
     line-height: 60px;
-    margin: 10px 0px;
+    margin: 10px 0;
     color: var(--light);
     position: relative;
 
