--- a/src/routes/preparation.scss
+++ b/src/routes/preparation.scss
@@ -18,10 +18,9 @@
 
   .status {
     margin: auto;
-    padding-top: 10px;
     width: 100%;
     height: 100%;
-    padding: 0 14px;
+    padding: 10px 14px 0;
 
     &::-webkit-scrollbar {
       width: 0 !important;
@@ -32,7 +31,7 @@
       line-height: 60px;
     }
 
-    // Removes the visuals clics for pending (because you can't downgrade a pending order)
+    // Removes the visuals clicks for pending (because you can't downgrade a pending order)
     &.pending .orders .order .next.downgrade {
       background-color: var(--danger-dark);
     }
