--- a/src/app/page.scss
+++ b/src/app/page.scss
@@ -36,3 +36,34 @@ body {
   width: 0; /* Remove scrollbar space */
   background: transparent; /* Optional: just make scrollbar invisible */
 }
+.logout {
+  padding-right: 14px;
+}
+
+#index {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  flex-wrap: wrap;
+  align-items: stretch;
+  height: calc(100% - 50px);
+  font-size: 3em;
+
+  div {
+    height: calc(33% - 20px - 4px);
+    width: calc(50% - 20px - 4px - 20px);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--primary);
+    margin: 10px;
+
+    .fa {
+      margin-right: 15px;
+    }
+
+    &:hover {
+      filter: brightness(0.9);
+    }
+  }
+}
