fix: add dotenv and add index

--- a/src/app/page.scss
+++ b/src/app/page.scss
@@ -67,3 +67,13 @@ body {
     }
   }
 }
+
+:visited {
+  background-color: var(--primary-dark);
+  color: var(--light);
+  text-align: center;
+  height: 100%;
+  margin: 0;
+  font-family: 'Roboto', Arial, Helvetica, sans-serif;
+  user-select: none;
+}
