--- a/src/app/preparation/page.scss
+++ b/src/app/preparation/page.scss
@@ -51,9 +51,13 @@
       margin: 5px 0;
       width: 20%;
 
+      .place,
+      .quantity {
+        font-size: 1.75em;
+      }
+
       .place {
         margin-bottom: 10px;
-        font-size: 1.75em;
       }
     }
 
