feat: service page

--- a/src/app/page.scss
+++ b/src/app/page.scss
@@ -77,7 +77,7 @@ body {
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        row-gap: 5vh;
+        row-gap: 5%;
         background-color: var(--primary);
         margin: 0px 10px;
         border-radius: .2em;
