update: font-size in rem instead of em

--- a/src/app/page.scss
+++ b/src/app/page.scss
@@ -52,7 +52,7 @@ body {
   div.link_category {
     display: grid;
     grid-template-columns: 100%;
-    grid-template-rows: 1.2em auto;
+    grid-template-rows: 3rem auto;
     row-gap: 10px;
     height: calc(33% - 20px);
     width: calc(100% - 20px);
